// Copyright Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// THIS FILE IS AUTOMATICALLY GENERATED BY MIXGEN.

syntax = "proto3";



package samplereport;


import "gogoproto/gogo.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";
import "google/protobuf/any.proto";
import "mixer/adapter/model/v1beta1/report.proto";
import "policy/v1beta1/value_type.proto";
import "policy/v1beta1/type.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_REPORT;
option (istio.mixer.adapter.model.v1beta1.template_name) = "samplereport";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.stable_marshaler_all) = true;

// HandleSampleReportService is implemented by backends that wants to handle request-time 'samplereport' instances.
service HandleSampleReportService {
    // HandleSampleReport is called by Mixer at request-time to deliver 'samplereport' instances to the backend.
    rpc HandleSampleReport(HandleSampleReportRequest) returns (istio.mixer.adapter.model.v1beta1.ReportResult);
    
}

// Request message for HandleSampleReport method.
message HandleSampleReportRequest {

    // 'samplereport' instances.
    repeated InstanceMsg instances = 1;

    // Adapter specific handler configuration.
    //
    // Note: Backends can also implement [InfrastructureBackend][https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html#InfrastructureBackend]
    // service and therefore opt to receive handler configuration during session creation through [InfrastructureBackend.CreateSession][TODO: Link to this fragment]
    // call. In that case, adapter_config will have type_url as 'google.protobuf.Any.type_url' and would contain string
    // value of session_id (returned from InfrastructureBackend.CreateSession).
    google.protobuf.Any adapter_config = 2;

    // Id to dedupe identical requests from Mixer.
    string dedup_id = 3;
}





// Contains instance payload for 'samplereport' template. This is passed to infrastructure backends during request-time
// through HandleSampleReportService.HandleSampleReport.
message InstanceMsg {

    // Name of the instance as specified in configuration.
    string name = 72295727;
    
    
    istio.policy.v1beta1.Value value = 1;
    
    
    map<string, istio.policy.v1beta1.Value> dimensions = 2;
    
}

// Contains inferred type information about specific instance of 'samplereport' template. This is passed to
// infrastructure backends during configuration-time through [InfrastructureBackend.CreateSession][TODO: Link to this fragment].
message Type {
    
    
    istio.policy.v1beta1.ValueType value = 1;
    
    
    map<string, istio.policy.v1beta1.ValueType> dimensions = 2;
    
}


// Represents instance configuration schema for 'samplereport' template.
message InstanceParam {
    
    
    string value = 1;
    
    
    map<string, string> dimensions = 2;
    
}

